# wallpaper-picker-ui

./: .gitignore  README.md  biome.json  components.json  eslint.config.mjs  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  permissions.json
src-tauri/src/: generate_thumbnails.rs  get_videos_list.rs  lib.rs  log_message.rs  main.rs  select_folder.rs  send_command.rs
src/lib/api/config/: clear.ts  ensure.ts  read.ts  update.ts
src/lib/api/system/: execCommand.ts  fetchVideos.ts  selectFolder.ts
src/lib/api/thumbnails/: clear.ts  generate.ts  handle.ts
src/lib/components/devProfile/: devProfile.svelte  index.ts
src/lib/components/display/: display.svelte  index.ts
src/lib/components/navbar/: index.ts  navbar.svelte
src/lib/components/space/: index.ts  space.svelte
src/lib/components/ui/card/: card.svelte  (+6 more)
src/lib/components/update/: index.ts  update.svelte
src/lib/config/: contributors.json
src/lib/lang/: index.ts  translation.schema.json
src/lib/lang/translations/: english-translation.json  french-translation.json  german-translation.json  portuguese-brasil-translation.json  spanish-translation.json
src/lib/utils/: darkMode.ts  ensureDirs.ts  index.ts  logger.ts  paths.ts  sortJson.ts  updating.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/about/: +page.svelte
src/routes/settings/: +page.svelte
src/types/: configTypes.ts  devProfileTypes.ts  langTypes.ts  loggerTypes.ts  updateTypes.ts
(+30 files in other folders)
