[package]
name = "wallpaper-picker-ui"
version = "3.0.0"
description = "A simple UI for selecting and applying wallpapers with a customizable command."
authors = ["Rodrigo Matuz <rodrigosantoslima1311@gmail.com>"]
repository = "https://github.com/Rodrigo-Matuz/wallpaper-picker-ui"
edition = "2021"

[lib]
name = "wallpaper_picker_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
colored = "2.1.0"
tauri-plugin-fs = "2"
